--- a/.github/ISSUE_TEMPLATE/create_paper.yml
+++ b/.github/ISSUE_TEMPLATE/create_paper.yml
@@ -1,61 +1,59 @@
----
 name: 📄 提交论文资源
 description: 提交一篇 AI 相关论文
 title: "[论文] Paper_<姓名>_<关键词>"
-labels: [paper-submission]
+labels:
+  - paper-submission
 assignees: []
-issue_template: true
----
 
 body:
   - type: input
     id: paperTitle
     attributes:
-      label: 📌 论文标题
-      placeholder: 请输入论文标题
+      label: "📌 论文标题"
+      placeholder: "请输入论文标题"
     validations:
       required: true
 
   - type: input
     id: author
     attributes:
-      label: 👤 作者姓名
-      placeholder: 张三
+      label: "👤 作者姓名"
+      placeholder: "张三"
     validations:
       required: true
 
   - type: input
     id: publishYear
     attributes:
-      label: 📅 发表年份
-      placeholder: 2024
+      label: "📅 发表年份"
+      placeholder: "2024"
     validations:
       required: true
 
   - type: input
     id: journal
     attributes:
-      label: 🏷️ 期刊/会议名称
-      placeholder: IEEE TPAMI / AAAI / arXiv
+      label: "🏷️ 期刊/会议名称"
+      placeholder: "IEEE TPAMI / AAAI / arXiv"
     validations:
       required: true
 
   - type: input
     id: pdfLink
     attributes:
-      label: 📎 PDF 链接（可选）
-      placeholder: https://example.com/paper.pdf
+      label: "📎 PDF 链接（可选）"
+      placeholder: "https://example.com/paper.pdf"
 
   - type: textarea
     id: summary
     attributes:
-      label: 📘 简要介绍
-      placeholder: 简要介绍研究内容、方法、贡献等
+      label: "📘 简要介绍"
+      placeholder: "简要介绍研究内容、方法、贡献等"
     validations:
       required: true
 
   - type: textarea
     id: bibtex
     attributes:
-      label: 📖 BibTeX 引用（可选）
-      placeholder: @article{...}
+      label: "📖 BibTeX 引用（可选）"
+      placeholder: "@article{...}"
