--- a/.github/ISSUE_TEMPLATE/create_paper.yml
+++ b/.github/ISSUE_TEMPLATE/create_paper.yml
@@ -1,6 +1,6 @@
 name: 📄 提交论文资源
 description: 提交一篇 AI 相关论文
-title: "[论文] Paper_<姓名>_<关键词>"
+title: "[论文] Paper_<年份>_<期刊/会议名缩写>_<题目>"
 labels:
   - paper-submission
 assignees: []
